--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,13 @@
 {
+  "version": 2,
   "functions": {
-    "api/index.js": { "runtime": "nodejs20.x" }
+    "api/index.js": {
+      "runtime": "@vercel/node@3.0.0"
+    }
   },
   "routes": [
     { "src": "^/$", "dest": "/public/index.html" },
-    { "src": "^/api/.*", "dest": "/api/index.js" },
+    { "src": "^/api/(.*)$", "dest": "/api/index.js" },
     { "src": "^/public/(.*)$", "dest": "/public/$1" }
   ]
 }
