--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
-  "engines": { "node": ">=20" },
+  "engines": { "node": "18.x" },
   "scripts": {
     "dev": "node api/local-dev.js",
     "start": "node api/local-dev.js"
