--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,13 @@
 {
   "version": 2,
   "functions": {
-    "api/index.js": {
-      "runtime": "@vercel/node@3.0.0"
+    "api/(.*).js": {
+      "runtime": "nodejs22.x"
     }
   },
   "routes": [
     { "src": "^/$", "dest": "/public/index.html" },
-    { "src": "^/api/(.*)$", "dest": "/api/index.js" },
-    { "src": "^/public/(.*)$", "dest": "/public/$1" }
+    { "src": "^/public/(.*)$", "dest": "/public/$1" },
+    { "src": "^/api/(.*)$", "dest": "/api/$1.js" }
   ]
 }
