--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,12 @@
 {
-  "version": 2,
-  "rewrites": [
-    { "source": "/api/:path*", "destination": "/api/:path*" },
-    { "source": "/", "destination": "/public/index.html" },
-    { "source": "/:path*", "destination": "/public/:path*" }
+  "version": 3,
+  "functions": {
+    "api/[...all].js": {
+      "runtime": "nodejs20.x"
+    }
+  },
+  "routes": [
+    { "src": "^/api/(.*)$", "dest": "api/[...all].js" },
+    { "src": "^/(.*)$", "dest": "/public/$1" }
   ]
 }
