--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
   "name": "club-app",
-  "version": "1.0.0",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "node api/local-dev.js",
-    "start": "node api/local-dev.js"
+    "build": "echo \"no build\"",
+    "start": "node api/[...all].js"
   },
   "dependencies": {
-    "@neondatabase/serverless": "^0.10.0",
-    "express": "^4.19.2",
-    "serverless-http": "^3.2.0"
+    "@neondatabase/serverless": "^0.9.0"
   }
 }
