--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,11 @@
 {
-  "version": 3,
+  "version": 2,
   "functions": {
     "api/[...all].js": {
       "runtime": "nodejs20.x"
     }
   },
   "routes": [
-    { "src": "^/api/(.*)$", "dest": "api/[...all].js" },
-    { "src": "^/(.*)$", "dest": "/public/$1" }
+    { "src": "/api/.*", "dest": "/api/[...all].js" }
   ]
 }
