--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,9 @@
 {
   "version": 2,
-  "functions": {
-    "api/[...all].js": {
-      "runtime": "nodejs20.x"
-    }
-  },
+  "builds": [
+    { "src": "api/[...all].js", "use": "@vercel/node" }
+  ],
   "routes": [
-    { "src": "/api/.*", "dest": "/api/[...all].js" }
+    { "src": "/api/.*", "dest": "api/[...all].js" }
   ]
 }
